<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_login"
    android:orientation="vertical" >

    <!-- padding 内边距   layout_margin 外边距
  		android:layout_alignParentTop 布局的位置是否处于顶部 -->
  		
  	<RelativeLayout 
  	    android:id="@+id/login_div"
  	    android:layout_width="fill_parent"
  		android:layout_height="wrap_content"
  		android:padding="15dip"        
    	android:layout_margin="15dip" 
    	android:background="@drawable/background_login_div_bg" >
  		<!-- 账号 -->
    	<TextView 
    		android:id="@+id/login_user_input"
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:layout_alignParentTop="true"
    		android:layout_marginTop="5dp"
    		android:text="@string/login_label_username"
    		style="@style/normalText"/>
    	<EditText 
    		android:id="@+id/username_edit"
    		android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:hint="@string/login_username_hint"
    		android:layout_below="@id/login_user_input"
    		android:singleLine="true"
    		android:inputType="text"/>
      <!-- 密码 text -->
      <TextView 
      	android:id="@+id/login_password_input"
      	android:layout_width="wrap_content"
      	android:layout_height="wrap_content"
      	android:layout_below="@id/username_edit"
      	android:layout_marginTop="3dp"
      	android:text="@string/login_label_password"
      	style="@style/normalText"/>

      <EditText
          android:id="@+id/password_edit"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:layout_below="@id/login_password_input"
          android:inputType="textPassword"
          android:singleLine="true" />

      <!-- 登录button 
      	
      -->
      <Button 
      	android:id="@+id/signin_button"
      	android:layout_width="wrap_content"
      	android:layout_height="wrap_content"
      	android:layout_below="@id/password_edit"
      	android:layout_alignRight="@id/password_edit"
      	android:text="@string/login_label_signin"
        android:background="@drawable/blue_button" />
  	</RelativeLayout>

  	<RelativeLayout
  	    android:layout_width="fill_parent"
  	    android:layout_height="206dp" >

  	    <TextView
  	        android:id="@+id/register_link"
  	        android:layout_width="wrap_content"
  	        android:layout_height="wrap_content"
  	        android:layout_marginLeft="15dp"
  	        android:text="@string/login_register_link"
  	        android:textColor="#888"
  	        android:textColorLink="#FF0066CC" />

  	</RelativeLayout>

</LinearLayout>