<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/background" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
   <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="38dp"
        android:background="@drawable/background_title"
        android:orientation="horizontal" >
    
		<TextView
		    android:id="@+id/title_return"
		    android:layout_width="36dp"
		    android:layout_height="38dp"
		    android:background="@drawable/background_title"
		    android:gravity="center"
		    android:text="  &lt;  " />
	    
		<LinearLayout
		    android:layout_width="fill_parent"
		    android:layout_height="38dp"
		    android:gravity="right" >

		    <TextView
		        android:id="@+id/title"
		        android:layout_width="match_parent"
		        android:layout_height="38dp"
		        android:background="@drawable/background_title"
		        android:gravity="center"
		        android:text="账户安全"
		        android:textSize="15dp" 
		        android:textColor="@color/white"
		     />
		</LinearLayout>

    </LinearLayout>
    <RelativeLayout android:id="@id/ChangeLoginPassword" android:background="@drawable/user_set_selector" android:layout_width="fill_parent" android:layout_height="50.0dip">
        <TextView android:textSize="@dimen/text_middle" android:textColor="@color/text_color_black_deep" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:text="@string/changeloginpassword" android:layout_centerVertical="true" />
        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="20.0dip" android:src="@drawable/arrow_noselect" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
    </RelativeLayout>
    <RelativeLayout android:background="@drawable/register_line" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    <RelativeLayout android:id="@id/ModifyPayment" android:background="@drawable/user_set_selector" android:layout_width="fill_parent" android:layout_height="50.0dip">
        <TextView android:textSize="@dimen/text_middle" android:textColor="@color/text_color_black_deep" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:text="@string/modifypayment" android:layout_centerVertical="true" />
        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="20.0dip" android:src="@drawable/arrow_noselect" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
    </RelativeLayout>
    <RelativeLayout android:background="@drawable/register_line" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    <RelativeLayout android:id="@id/RetrievePayment" android:background="@drawable/user_set_selector" android:layout_width="fill_parent" android:layout_height="50.0dip">
        <TextView android:textSize="@dimen/text_middle" android:textColor="@color/text_color_black_deep" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:text="@string/retrievepayment" android:layout_centerVertical="true" />
        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="20.0dip" android:src="@drawable/arrow_noselect" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
    </RelativeLayout>
    <RelativeLayout android:background="@drawable/register_line" android:layout_width="fill_parent" android:layout_height="wrap_content" />
</LinearLayout>
